--- a/example.html
+++ b/example.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rich Text Editor Example</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="example.css">
 </head>
 <body>
   <div class="editor-toolbar">
